--- a/NetBeansProjects/webApp/web/publico/login.xhtml
+++ b/NetBeansProjects/webApp/web/publico/login.xhtml
@@ -19,6 +19,7 @@
             <br />
             Motivo: #{SPRING_SECURITY_LAST_EXCEPTION.message}
         </h:panelGroup>
+           <h:graphicImage library="imagens" name="login.png" height="100" width="100" />
 
         <form id="login" method="post"
               action="#{request.contextPath}/j_spring_security_check">
