--- a/NetBeansProjects/caixa/web/protected/administracao.xhtml
+++ b/NetBeansProjects/caixa/web/protected/administracao.xhtml
@@ -6,10 +6,10 @@
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-    <ui:define name="Titulo">Gerenciamento de Sugestões</ui:define>
+    <ui:define name="Titulo">Caixa de Sugestões</ui:define>
     <ui:define name="corpo">
 
-        <h:form id="fr">
+        <h:form id="fr" >
             <p:growl id="messages" globalOnly="true" life="8000"/>                
             <p:toolbar id="toolbar">
                 <f:facet name="left">
